setting up new week 3 repo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Title of out tab -->
-    <title>TechMoms</title>
+    <!-- Title of the browser tab -->
+    <title>Tech-Moms</title>
     <!-- We are importing our css styles here -->
     <link rel="stylesheet" href="style.css">
     <!-- We are setting the tab icon here -->
@@ -21,67 +21,53 @@
     <!-- Grid -->
     <div class="grid-container">
         <!-- Header -->
-        <header class="head-container">
+        <header class="header-container">
             <!-- Navigation -->
-            <nav class="header-flex">
-                <img src="assets/techMoms-logo.PNG" alt="TechMoms" width="300px">
-                <a href="#">About</a>
-                <a href="#">Cohorts</a>
-                <a href="#">Resources</a>
-                <a href="#">Contact Us</a>
+            <nav>
+                <img class="logo-position" src="assets/tech-moms-logo-2021.PNG" alt="Tech-Moms" width="75px">
+                <div class="header-flex">
+                    <a href="#">About</a>
+                    <a href="#">Cohorts</a>
+                    <a href="#">Resources</a>
+                    <a href="#">Contact Us</a>
+                </div>
+
             </nav>
         </header>
 
-        <!-- Body -->
-        <main class="body-container">
-            <div class="body-flex">
-                <div>
-                    <img src="assets/techMoms-spring-2021.PNG" width="500px">
-                </div>
-
-                <div style="margin-left: 20px">
-                    <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                        sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-                        amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                        labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-                        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                        consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam
-                        nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-                    </p>
-                    <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                        sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-                        amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                        labore et dolore magnam aliquam quaerat voluptatem.
-                    </p>
-                    <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                        architecto beatae vitae dicta sunt explicabo.
-                    </p>
-                </div>
+        <!-- MAIN SECTION -->
+        <main class="main-container">
+            <div>
+                <img class="img-border" src="assets/tech-moms-working.jpg" height="550px">
             </div>
         </main>
 
         <!-- SIDEBAR -->
-        <div class="sidebar-container">
-            <div class="sidebar-content">
-                Want to find out how you can join TechMoms?
+        <aside class="sidebar-container">
+            <div class="sidebar-accent">Featured Stories</div>
+            <div class="sidebar-title">Once a Tech-Mom, always a Tech-Mom</div>
+
+            <div class="sidebar-tagline">
+                Tempora in nesciunt qui. Quae et fugiat maxime.
+                Quod occaecati veritatis eos libero error. Aliquid
+                ad ut dolor et quis voluptatem adipisci porro.
             </div>
-            <button class="sidebar-btn">Click Here!</button>
-        </div>
+
+            <div class="btn-spacing">
+                <button class="sidebar-btn">
+                    <div class="btn-flex">
+                        <div>Read More</div>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </button>
+            </div>
+
+        </aside>
 
         <!-- Footer -->
         <footer class="footer-container">
             <div class="footer-flex">
-                <div style="align-self: center;">
+                <div>
                     <i class="fab fa-facebook-square fa-3x mt-10"></i>
                     <i class="fab fa-linkedin fa-3x mt-10"></i>
                     <i class="fab fa-twitter-square fa-3x"></i>
